--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "firebase-admin": "^11.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
