--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "firebase-admin": "^11.10.1",
+    "handlebars": "^4.7.8",
+    "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "sass": "^1.66.1"
+    "sass": "^1.66.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
