--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "firebase-admin": "^11.10.1",
