--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "dotenv": "^16.3.1",
     "firebase-admin": "^11.10.1",
     "handlebars": "^4.7.8",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.22.0",
     "sass": "^1.66.1",
+    "sort-by": "^1.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
